Fixed spacing around comments.

--- a/assets/sass/layout/_comments.scss
+++ b/assets/sass/layout/_comments.scss
@@ -2,7 +2,7 @@
 
 .comments-container {
   background-color: $color-light-gray-alt5;
-  padding-top: 20px;
+  padding: 50px 0;
 }
 
 .comments-area {
